<resources>
    <string name="app_name">KUMO POS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="caption_check_allow_decimal">Satuan Desimal</string>
    <string name="caption_cancel">CANCEL</string>
    <string name="caption_ok">OK</string>
    <string name="caption_save_order">SIMPAN</string>
    <string name="caption_pay_order">BAYAR</string>
    <string name="caption_change_setting">Change App Setting</string>
    <string name="change_app_setting">Change App Setting</string>
    <string name="caption_sync">Synchronize Data</string>
    <string name="cash_in_caption">Kas Masuk</string>
    <string name="cash_out_caption">Kas Keluar</string>
    <string name="new_cash_trans_caption">Kas Masuk / Keluar</string>
    <string name="reconcile_caption">Rekap Kas</string>
    <string name="caption_status">Status</string>
    <string name="caption_date">Tanggal</string>
    <string name="caption_time">Jam</string>
    <string name="caption_amount">Amount</string>
    <string name="caption_type">Tipe</string>
    <string name="caption_note">Notes</string>
    <string name="caption_jumlah">Jumlah</string>
    <string name="caption_print_reconcile">Cetak Rekap Kas</string>
    <string name="caption_sales">Penjualan</string>
    <string name="caption_void">Void</string>
    <string name="caption_system_income">Penerimaan System</string>
    <string name="caption_actual_income">Penerimaan Aktual</string>
    <string name="caption_cash">Tunai</string>
    <string name="caption_card">Kartu</string>
    <string name="caption_variant">Selisih</string>
</resources>
