<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fma.kumo.facade.OrderFinishActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbCashIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cash_in_caption" />

                <RadioButton
                    android:id="@+id/rbCashOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cash_out_caption" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jumlah" />

            <EditText
                android:id="@+id/txtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/lbNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Catatan" />

            <EditText
                android:id="@+id/txtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorLightRed"
                android:text="@android:string/no"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/caption_save_order"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

